syntax = "proto3";

package orderpb;

option go_package = "github.com/furutachiKurea/gorder/common/genproto/orderpb";

import "google/protobuf/empty.proto";

service OrderService {
    rpc CreateOrder (CreateOrderRequest) returns (google.protobuf.Empty);
    rpc GetOrder (GetOrderRequest) returns (Order);
    rpc UpdateOrder(Order) returns (google.protobuf.Empty);
}

message CreateOrderRequest {
    string customer_id = 1;
    repeated ItemWithQuantity items = 2;
}

message GetOrderRequest {
  string order_id = 1;
  string customer_id = 2;
}

message ItemWithQuantity {
    string id = 1;
    int32 quantity = 2;
}

message Order {
  string id = 1;
  string customer_id = 2;
  string status = 3;
  string payment_link = 5;
  repeated Item items = 4;
}

message Item {
  string id = 1;
  string name = 2;
  int32 quantity = 3;
  string price_id = 4;
}
