syntax = "proto3";

package stockpb;

option go_package = "github.com/furutachiKurea/gorder/common/genproto/stockpb";

import "orderpb/order.proto";

service StockService {
  rpc GetItems(GetItemsRequest) returns (GetItemsResponse);
  rpc ReserveStock(ReserveStockRequest) returns (ReserveStockResponse);
}

message GetItemsRequest {
  repeated string item_ids = 1;
}

message GetItemsResponse {
  repeated orderpb.Item items = 1;
}

message ReserveStockRequest {
  repeated orderpb.ItemWithQuantity items = 1;
}

message ReserveStockResponse {
  repeated orderpb.Item items = 2;
}

